[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/PlantSpot.gd" type="Script" id=1]
[ext_resource path="res://assets/plant_1.png" type="Texture" id=2]
[ext_resource path="res://assets/plant_2.png" type="Texture" id=3]
[ext_resource path="res://assets/Plant_6.png" type="Texture" id=4]
[ext_resource path="res://assets/plant_3.png" type="Texture" id=5]
[ext_resource path="res://assets/Plant_4.png" type="Texture" id=6]
[ext_resource path="res://assets/Plant_5.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.10757
height = 0.0

[node name="PlantSpot" type="Area2D"]
script = ExtResource( 1 )

[node name="Plant_1" type="Sprite" parent="."]
position = Vector2( -1.52588e-05, 1.52588e-05 )
scale = Vector2( 0.146753, 0.137462 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( -4.11155, -4.9236 )
shape = SubResource( 1 )

[node name="Plant_2" type="Sprite" parent="."]
position = Vector2( -2.5625, -0.125009 )
scale = Vector2( 0.0608534, 0.0534116 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Plant_3" type="Sprite" parent="."]
position = Vector2( -2.50003, -16.25 )
scale = Vector2( 0.13535, 0.134746 )
texture = ExtResource( 5 )

[node name="Plant_4" type="Sprite" parent="."]
position = Vector2( 1.43051e-06, -8 )
scale = Vector2( 0.136986, 0.130435 )
texture = ExtResource( 6 )

[node name="Plant_5" type="Sprite" parent="."]
position = Vector2( 3.50003, -12 )
scale = Vector2( 0.161765, 0.144 )
texture = ExtResource( 7 )

[node name="Plant_6" type="Sprite" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 0.145472, 0.144444 )
texture = ExtResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
